template.yaml
Account available AZs: ['eu-west-1a', 'eu-west-1b', 'eu-west-1c']
Using AZs: ['eu-west-1a', 'eu-west-1b', 'eu-west-1c']
Parameters:
  VpcName:
    Type: String
    Default: SwisscomVPC
    Description: The name of the VPC
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Resources:
  SwisscomVPC423AFC06:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.16.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value:
            Ref: VpcName
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/Resource
  SwisscomVPCPublicSubnet1SubnetAD57BC3B:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1a
      CidrBlock: 172.16.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Public-A
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet1/Subnet
  SwisscomVPCPublicSubnet1RouteTable4F2DB9FB:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Public-A
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet1/RouteTable
  SwisscomVPCPublicSubnet1RouteTableAssociationB03D5B93:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SwisscomVPCPublicSubnet1RouteTable4F2DB9FB
      SubnetId:
        Ref: SwisscomVPCPublicSubnet1SubnetAD57BC3B
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet1/RouteTableAssociation
  SwisscomVPCPublicSubnet1DefaultRoute9C6A28F5:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: SwisscomVPCIGWFD8C9F88
      RouteTableId:
        Ref: SwisscomVPCPublicSubnet1RouteTable4F2DB9FB
    DependsOn:
      - SwisscomVPCVPCGW57F94AAE
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet1/DefaultRoute
  SwisscomVPCPublicSubnet1EIPC94A5749:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Public-A
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet1/EIP
  SwisscomVPCPublicSubnet1NATGateway055AF07D:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - SwisscomVPCPublicSubnet1EIPC94A5749
          - AllocationId
      SubnetId:
        Ref: SwisscomVPCPublicSubnet1SubnetAD57BC3B
      Tags:
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Public-A
    DependsOn:
      - SwisscomVPCPublicSubnet1DefaultRoute9C6A28F5
      - SwisscomVPCPublicSubnet1RouteTableAssociationB03D5B93
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet1/NATGateway
  SwisscomVPCPublicSubnet2Subnet1DB06E90:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1b
      CidrBlock: 172.16.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Public-B
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet2/Subnet
  SwisscomVPCPublicSubnet2RouteTableD14B28D6:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Public-B
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet2/RouteTable
  SwisscomVPCPublicSubnet2RouteTableAssociation4682726A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SwisscomVPCPublicSubnet2RouteTableD14B28D6
      SubnetId:
        Ref: SwisscomVPCPublicSubnet2Subnet1DB06E90
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet2/RouteTableAssociation
  SwisscomVPCPublicSubnet2DefaultRoute3FE11FE0:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: SwisscomVPCIGWFD8C9F88
      RouteTableId:
        Ref: SwisscomVPCPublicSubnet2RouteTableD14B28D6
    DependsOn:
      - SwisscomVPCVPCGW57F94AAE
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet2/DefaultRoute
  SwisscomVPCPublicSubnet3Subnet00821AF8:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1c
      CidrBlock: 172.16.2.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Public-C
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet3/Subnet
  SwisscomVPCPublicSubnet3RouteTableB311A0C7:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Public-C
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet3/RouteTable
  SwisscomVPCPublicSubnet3RouteTableAssociationA8A265A7:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SwisscomVPCPublicSubnet3RouteTableB311A0C7
      SubnetId:
        Ref: SwisscomVPCPublicSubnet3Subnet00821AF8
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet3/RouteTableAssociation
  SwisscomVPCPublicSubnet3DefaultRoute1FEA4560:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: SwisscomVPCIGWFD8C9F88
      RouteTableId:
        Ref: SwisscomVPCPublicSubnet3RouteTableB311A0C7
    DependsOn:
      - SwisscomVPCVPCGW57F94AAE
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/PublicSubnet3/DefaultRoute
  SwisscomVPCWorkersSubnet1SubnetD75254CE:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1a
      CidrBlock: 172.16.16.0/20
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Workers
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Workers-A
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/WorkersSubnet1/Subnet
  SwisscomVPCWorkersSubnet1RouteTable74B2E3BD:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Workers-A
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/WorkersSubnet1/RouteTable
  SwisscomVPCWorkersSubnet1RouteTableAssociation15770B40:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SwisscomVPCWorkersSubnet1RouteTable74B2E3BD
      SubnetId:
        Ref: SwisscomVPCWorkersSubnet1SubnetD75254CE
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/WorkersSubnet1/RouteTableAssociation
  SwisscomVPCWorkersSubnet1DefaultRoute057E74ED:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: SwisscomVPCPublicSubnet1NATGateway055AF07D
      RouteTableId:
        Ref: SwisscomVPCWorkersSubnet1RouteTable74B2E3BD
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/WorkersSubnet1/DefaultRoute
  SwisscomVPCWorkersSubnet2SubnetB1A70A6E:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1b
      CidrBlock: 172.16.32.0/20
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Workers
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Workers-B
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/WorkersSubnet2/Subnet
  SwisscomVPCWorkersSubnet2RouteTableBC3C6848:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Workers-B
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/WorkersSubnet2/RouteTable
  SwisscomVPCWorkersSubnet2RouteTableAssociation19F9EF4B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SwisscomVPCWorkersSubnet2RouteTableBC3C6848
      SubnetId:
        Ref: SwisscomVPCWorkersSubnet2SubnetB1A70A6E
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/WorkersSubnet2/RouteTableAssociation
  SwisscomVPCWorkersSubnet2DefaultRouteD80E9483:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: SwisscomVPCPublicSubnet1NATGateway055AF07D
      RouteTableId:
        Ref: SwisscomVPCWorkersSubnet2RouteTableBC3C6848
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/WorkersSubnet2/DefaultRoute
  SwisscomVPCWorkersSubnet3SubnetE5472EB6:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1c
      CidrBlock: 172.16.48.0/20
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Workers
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Workers-C
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/WorkersSubnet3/Subnet
  SwisscomVPCWorkersSubnet3RouteTableC7365762:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key:
            Fn::Join:
              - ""
              - - kubernetes.io/cluster/
                - Ref: VpcName
          Value: shared
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -Workers-C
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/WorkersSubnet3/RouteTable
  SwisscomVPCWorkersSubnet3RouteTableAssociation47E95989:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SwisscomVPCWorkersSubnet3RouteTableC7365762
      SubnetId:
        Ref: SwisscomVPCWorkersSubnet3SubnetE5472EB6
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/WorkersSubnet3/RouteTableAssociation
  SwisscomVPCWorkersSubnet3DefaultRoute97C5D881:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: SwisscomVPCPublicSubnet1NATGateway055AF07D
      RouteTableId:
        Ref: SwisscomVPCWorkersSubnet3RouteTableC7365762
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/WorkersSubnet3/DefaultRoute
  SwisscomVPCControlPlaneSubnet1Subnet46608ACB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1a
      CidrBlock: 172.16.64.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: ControlPlane
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -ControlPlane-A
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/ControlPlaneSubnet1/Subnet
  SwisscomVPCControlPlaneSubnet1RouteTable2861FCD7:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -ControlPlane-A
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/ControlPlaneSubnet1/RouteTable
  SwisscomVPCControlPlaneSubnet1RouteTableAssociation9C16D627:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SwisscomVPCControlPlaneSubnet1RouteTable2861FCD7
      SubnetId:
        Ref: SwisscomVPCControlPlaneSubnet1Subnet46608ACB
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/ControlPlaneSubnet1/RouteTableAssociation
  SwisscomVPCControlPlaneSubnet2Subnet18775F2D:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1b
      CidrBlock: 172.16.65.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: ControlPlane
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -ControlPlane-B
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/ControlPlaneSubnet2/Subnet
  SwisscomVPCControlPlaneSubnet2RouteTableD5ECF213:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -ControlPlane-B
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/ControlPlaneSubnet2/RouteTable
  SwisscomVPCControlPlaneSubnet2RouteTableAssociationC577E611:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SwisscomVPCControlPlaneSubnet2RouteTableD5ECF213
      SubnetId:
        Ref: SwisscomVPCControlPlaneSubnet2Subnet18775F2D
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/ControlPlaneSubnet2/RouteTableAssociation
  SwisscomVPCControlPlaneSubnet3Subnet69F710A2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1c
      CidrBlock: 172.16.66.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: ControlPlane
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -ControlPlane-C
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/ControlPlaneSubnet3/Subnet
  SwisscomVPCControlPlaneSubnet3RouteTableF8681D3C:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: VpcName
                - -ControlPlane-C
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/ControlPlaneSubnet3/RouteTable
  SwisscomVPCControlPlaneSubnet3RouteTableAssociation0CD4CE5F:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: SwisscomVPCControlPlaneSubnet3RouteTableF8681D3C
      SubnetId:
        Ref: SwisscomVPCControlPlaneSubnet3Subnet69F710A2
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/ControlPlaneSubnet3/RouteTableAssociation
  SwisscomVPCIGWFD8C9F88:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value:
            Ref: VpcName
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/IGW
  SwisscomVPCVPCGW57F94AAE:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: SwisscomVPCIGWFD8C9F88
      VpcId:
        Ref: SwisscomVPC423AFC06
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/VPCGW
  SwisscomVPCRestrictDefaultSecurityGroupCustomResource256AA0D5:
    Type: Custom::VpcRestrictDefaultSG
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E
          - Arn
      DefaultSecurityGroupId:
        Fn::GetAtt:
          - SwisscomVPC423AFC06
          - DefaultSecurityGroup
      Account: "737247133878"
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: NetworkStack/SwisscomVPC/RestrictDefaultSecurityGroupCustomResource/Default
  CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
      ManagedPolicyArns:
        - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: Inline
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:AuthorizeSecurityGroupIngress
                  - ec2:AuthorizeSecurityGroupEgress
                  - ec2:RevokeSecurityGroupIngress
                  - ec2:RevokeSecurityGroupEgress
                Resource:
                  - Fn::Join:
                      - ""
                      - - arn:aws:ec2:eu-west-1:737247133878:security-group/
                        - Fn::GetAtt:
                            - SwisscomVPC423AFC06
                            - DefaultSecurityGroup
    Metadata:
      aws:cdk:path: NetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role
  CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket: cdk-hnb659fds-assets-737247133878-eu-west-1
        S3Key: 7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip
      Timeout: 900
      MemorySize: 128
      Handler: __entrypoint__.handler
      Role:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
          - Arn
      Runtime: nodejs22.x
      Description: Lambda function for removing all inbound/outbound rules from the VPC default security group
    DependsOn:
      - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
    Metadata:
      aws:cdk:path: NetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler
      aws:asset:path: asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200
      aws:asset:property: Code
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/+2XzW/TMBTA/xZ8RG5gnYTEbl1AEAnWqJ12YJrQi+22pokd+SOjVP3feU6cVurQOMDBh51sv6/8bMd+z9NsevE+e/sKHu2E8e2kllW2XzpgW5qvVAkGGuGEoaj/Ltg029+17H5PhIKqFh+U/aytU2hjyZUzXtCTZunbVhs3ymU749wIa4MpeU0oaeDn7Nc4UOA+gROPsHsqWfpKCYfyPbF993bXCrQqfVVLRg40inOtVnLtDTipFblCzEAWw/3JkxImufkKdntEagdV0c7VF/CKbQb+A30mmJEdgp5He86lsLpGF/7E54GSrmU3oxuOcRfuypwOWMNK4MSgA1lDJWvpdt+0Gj+CvgWP/RD4utbsr3MLe9O9y8/MwVq5VgVq4r7NVW5EXNo4vSQoehDOb46/C+48ah6SAUyDIhmQNCiGkzWcp9BbaO/Ebbi6TvKTbGatZrIPcD [...]
    Metadata:
      aws:cdk:path: NetworkStack/CDKMetadata/Default
Outputs:
  VpcId:
    Value:
      Ref: SwisscomVPC423AFC06
  AvailabilityZones:
    Value: eu-west-1a,eu-west-1b,eu-west-1c
  PublicSubnetCount:
    Value: "3"
  PrivateSubnetCount:
    Value: "3"
  IsolatedSubnetCount:
    Value: "3"
  PrivateSubnetIds:
    Value:
      Fn::Join:
        - ""
        - - Ref: SwisscomVPCWorkersSubnet1SubnetD75254CE
          - ","
          - Ref: SwisscomVPCWorkersSubnet2SubnetB1A70A6E
          - ","
          - Ref: SwisscomVPCWorkersSubnet3SubnetE5472EB6
  IsolatedSubnetIds:
    Value:
      Fn::Join:
        - ""
        - - Ref: SwisscomVPCControlPlaneSubnet1Subnet46608ACB
          - ","
          - Ref: SwisscomVPCControlPlaneSubnet2Subnet18775F2D
          - ","
          - Ref: SwisscomVPCControlPlaneSubnet3Subnet69F710A2
  ExportsOutputRefSwisscomVPC423AFC062A504B3F:
    Value:
      Ref: SwisscomVPC423AFC06
    Export:
      Name: NetworkStack:ExportsOutputRefSwisscomVPC423AFC062A504B3F
  ExportsOutputRefSwisscomVPCWorkersSubnet1SubnetD75254CE334547A1:
    Value:
      Ref: SwisscomVPCWorkersSubnet1SubnetD75254CE
    Export:
      Name: NetworkStack:ExportsOutputRefSwisscomVPCWorkersSubnet1SubnetD75254CE334547A1
  ExportsOutputRefSwisscomVPCWorkersSubnet2SubnetB1A70A6E7EB74BF3:
    Value:
      Ref: SwisscomVPCWorkersSubnet2SubnetB1A70A6E
    Export:
      Name: NetworkStack:ExportsOutputRefSwisscomVPCWorkersSubnet2SubnetB1A70A6E7EB74BF3
  ExportsOutputRefSwisscomVPCWorkersSubnet3SubnetE5472EB62D37FF91:
    Value:
      Ref: SwisscomVPCWorkersSubnet3SubnetE5472EB6
    Export:
      Name: NetworkStack:ExportsOutputRefSwisscomVPCWorkersSubnet3SubnetE5472EB62D37FF91
